change hangul serif font

--- a/_extensions/pdfbook/preamble.tex
+++ b/_extensions/pdfbook/preamble.tex
@@ -67,7 +67,7 @@
 % https://fonts.google.com/specimen/Open+Sans
 % \setsansfont{Open Sans}
 
-\setmainhangulfont{NanumMyeongjoOTF}[%
+\setmainhangulfont{NanumMyeongjo}[%
   Ligatures = TeX,
   Scale     = 1.0,
 	Renderer  = OpenType,
@@ -294,7 +294,7 @@
 %%==============================================================================
 %% https://tex.stackexchange.com/questions/16964/block-quote-with-big-quotation-marks
 %% Start shadequote define ----------------------------------------------------- 
-\newfontfamily\quotefont[Ligatures=TeX]{NanumMyeongjoOTF} 
+\newfontfamily\quotefont[Ligatures=TeX]{NanumMyeongjo} 
 \newcommand*\quotesize{40} % if quote size changes, need a way to make shifts relative
 % Make commands for the quotes
 \newcommand*{\openquote}
