bibliography 기능 추가. (#10)

--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,7 @@
----
-output-file: _index.md
----
 # 머리말 {.unnumbered}
 
 R은 통계적인 계산과 시각화에 많은 장점을 가지고 있는 도구이다. 개인적으로는 S-PLUS의 경험을 시작으로 해서 R이라는 아주 친한 친구를 알게 된 것을 대단한 행운으로 여기고 있다. R에대한깊이가깊다고자신할수는없지만, 함께해 온 날은 결코 짧지 않다. 1993년 여름, S-PLUS를 통해 S 언어를 처음 접한 후 매우 강한 인상을 받았다. 그리고 2000년대 초 어느 서점에서 책을 뒤적이다가 단 몇 줄이지만 S 언어의 클론이라는 존재로 R이라는 것이 있음을 알고 전율을 느꼈던 순간을 잊지 못한다. 그리고 아직 까지도 통계적인 계산과 시각화에 R보다 더 좋은 도구가 없다는 생각에는 변함이 없다.
 
 필자는 2005년 "R 그래픽스"를 통해서 R을 이용해서 여러 가지 통계적인 그래프를 그리는 방법과 원리를 제시했고, 2010년 "R 프로그래밍"을 통해서는 R로 데이터를 다루고 프로그래밍을 하는 방법을 설명하였다. 그리고 이제 R을 이용해서 통계학의 기본적인 원리를 이해할 수 있도록 예제 중심의 통계학 기본서를 내놓게 되었다. 늘 그렇듯 책을 마 무리하는 시점에서는 항상 부족함을 느낀다. 그러나 딱딱한 수리적인 통계 이론이 아닌 R을 이용해서 쉽게 통계학의 원리를 터득할 수 있는 예제를 표현하려고 노력한 것에 대 해서는 인정해 주었으면 한다.
 
-기타 등등
+기타 등등 블라블라
