bitPublish 기능 소개 chapter 추가(#9)

--- a/references.bib
+++ b/references.bib
@@ -5,6 +5,48 @@
   publisher = {자유아카데미}
 }
 
+@misc{quarto,
+  author = {posit},
+  title = {Welcome to Quarto},
+  howpublished = {\url{https://quarto.org/}},
+  note = {Accessed: 2023-05-15}
+}
+
+@misc{extensions,
+  author = {posit},
+  title = {Creating Extensions},
+  howpublished = {\url{https://quarto.org/docs/extensions/creating.html}},
+  note = {Accessed: 2023-05-15}
+}
+
+@misc{quartoarch,
+  author = {Allison Horst},
+  title = {ÇETINKAYA-RUNDEL \& LOWNDES QUARTO KEYNOTE},
+  howpublished = {\url{https://allisonhorst.com/cetinkaya-rundel-lowndes-quarto-keynote}},
+  note = {Accessed: 2023-05-17}
+}
+
+@misc{layout,
+  author = {Math 600},
+  title = {Placing and Spacing},
+  howpublished = {\url{http://cemc1.uwaterloo.ca/~math600/wp/wp-content/uploads/2012/09/layout.png}},
+  note = {Accessed: 2023-05-16}
+}
+
+@misc{geometry,
+  author = {Jonas Devlieghere},
+  title = {Packages I Wish I Knew When Starting LaTeX},
+  howpublished = {\url{https://jonasdevlieghere.com/content/images/2015/06/geometry.png}},
+  note = {Accessed: 2023-05-16}
+}
+
+@misc{geometry-1,
+  author = {Math 600},
+  title = {CTEX - 在线文档 - TeX/LaTeX 常用宏包},
+  howpublished = {\url{https://ctex.org/documents/packages/images/geometry-1.gif}},
+  note = {Accessed: 2023-05-16}
+}
+
 @article{knuth84,
   author = {Knuth, Donald E.},
   title = {Literate Programming},
@@ -22,3 +64,4 @@
   pages = {97–111},
   numpages = {15}
 }
+
