change 인용폰트 in bitPublish.tex

--- a/_extensions/bitPublish/bitPublish.tex
+++ b/_extensions/bitPublish/bitPublish.tex
@@ -156,7 +156,7 @@
 %% *** Quarto에서는 `(backticks)이 \texttt로 변환됨
 %% *** 이 명령을 사용할 경우에는 오리지날 \texttt와의 side effect를 조심해야 함
 % start markdown의 `(backticks) 강조 구현 -----
-% \newcommand{\backticks}{\setmainfont{Noto Sans KR}\hangulfontspec{Noto Sans KR}\selectfont}
+% \newcommand{\backticks}{\setmainfont{KoPubWorld돋움체_Pro}\hangulfontspec{KoPubWorld돋움체_Pro}\selectfont}
 % \let\oldtexttt\texttt
 % \renewcommand{\texttt}[1]{%
 %   {\backticks\oldtexttt{#1{}}}
@@ -211,7 +211,7 @@
 %%==============================================================================
 %% https://tex.stackexchange.com/questions/16964/block-quote-with-big-quotation-marks
 %% Start shadequote define ----------------------------------------------------- 
-\newfontfamily\quotefont[Ligatures=TeX]{NanumMyeongjo} 
+\newfontfamily\quotefont[Ligatures=TeX]{KoPubWorld바탕체_Pro} 
 \newcommand*\quotesize{40} % if quote size changes, need a way to make shifts relative
 % Make commands for the quotes
 \newcommand*{\openquote}
