--- a/references.bib
+++ b/references.bib
@@ -26,6 +26,13 @@
   note = {Accessed: 2023-05-17}
 }
 
+@misc{float,
+  author = {미니도넛},
+  title = {이미지 특정 위치에 고정하기},
+  howpublished = {\url{https://forestunit.tistory.com/117}},
+  note = {Accessed: 2023-05-20}
+}
+
 @misc{layout,
   author = {Math 600},
   title = {Placing and Spacing},
@@ -45,6 +52,21 @@
   title = {CTEX - 在线文档 - TeX/LaTeX 常用宏包},
   howpublished = {\url{https://ctex.org/documents/packages/images/geometry-1.gif}},
   note = {Accessed: 2023-05-16}
+}
+
+@article{kim2007,
+  author = {김강수},
+  title = {한글 라텍에서 조사 이형태 교체의 자동화에 관하여},
+  year = {2007},
+  issue_date = {October 2007},
+  publisher = {한글텍사용자그룹},
+  address = {Korea},
+  volume = {1},
+  number = {2},
+  url = {http://ajt.ktug.org/2007/0102karnes.pdf},
+  journal = {The Asian Journal of TEX},
+  pages = {153–166},
+  numpages = {14}
 }
 
 @article{knuth84,
