--- a/chap_troubleshooting.qmd
+++ b/chap_troubleshooting.qmd
@@ -57,8 +57,14 @@ quarto update tinytex
 
 ### 찾아보기 오류
 
-찾아보기 명령 \\index{}를 사용할 때, 텍스트 내에 언더라인(\_)이 있을 경우 다음과 같은 에러가 발생합니다. 
+다음과 같이 찾아보기 명령 \\index{}를 사용할 때,
 
+```tex
+\index{include_graphics()}
+```
+
+텍스트 내에 언더라인(\_)이 있을 경우 다음과 같은 에러가 발생합니다. 
+ 
 ```verbatim
 ompilation failed- Error compiling latex
 Missing $ inserted.
