--- a/references.bib
+++ b/references.bib
@@ -33,6 +33,14 @@
   note = {Accessed: 2023-05-20}
 }
 
+@misc{rmcook,
+  author = {Yihui Xie, Christophe Dervieux, Emily Riederer},
+  title = {R Markdown Cookbook},
+  year = {2022},  
+  howpublished = {\url{https://bookdown.org/yihui/rmarkdown-cookbook/custom-blocks.html}},
+  note = {Accessed: 2023-05-29}
+}
+
 @misc{layout,
   author = {Math 600},
   title = {Placing and Spacing},
