edit quote block

--- a/chap_exams.qmd
+++ b/chap_exams.qmd
@@ -188,7 +188,14 @@ MS Windows에서는 별도의 설정이 없으면, 텍스트 파일의 한글을
 
 이러한 이유들로 인해서 파이프 연산자는 특히 `dplyr` 패키지의 데이터 처리에서 두각을 보였으며, 많은 R 사용자들의 R 스크립트에서 사랑받게되었다. 그래서 이제는 외부(3rd-party) 패키지가 아니라 R 엔진 자체에 파이프 연산자를 포함시켰고, `|>`\index{\textbar>}로 표현한다.
 
-> 이 책에서는 수리적인 알고리즘의 이해를 위한 작업이 아니라면, 가급적으로 R의 내장 파이프 연산자를 `|>`를 사용하여 파이프라인 처리를 하겠다. 유용한 기능이기 때문에 적극적으로 습득하는 것을 추천한다. 
+```{r}
+#| echo: false
+#| results: asis
+quote_block(
+  "이 책에서는 수리적인 알고리즘의 이해를 위한 작업이 아니라면, 가급적으로 R의 내장 파이프 연산자를 |>를 사용하여 파이프라인 처리를 하겠다. 유용한 기능이기 때문에 적극적으로 습득하는 것을 추천한다.")
+```
+
+
 
 `state.region`은 내장 데이터셋으로 미국 50개주를 'Northeast', 'South', 'North Central', \`West'라는 4개 권역으로 분류한 범주형 데이터다. 이 데이터를 `dplyr` 패키지의 함수와 파이프 연산자를 이용해서 도수분포표를 만들어보겠다.
 
