--- a/chap_intro_bitpublish.qmd
+++ b/chap_intro_bitpublish.qmd
@@ -421,9 +421,13 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 :::
 
 
-### 이야기 박스
+### 이야기 블록
 
-`shadequote` 환경을 이용합니다. 이야기 박스 구문은 다음과 같습니다.
+이야기 블록은 저자가 독자에게 강조해서 하고 싶은 이야기나, 명사의 명언을 인용하여 이야기할 때 사용하는 블록으로 멀티 아웃 포맷을 지원합니다.
+
+### PDF 저작 전용
+
+PDF 문서로만 저작할 경우에 사용하는데, `shadequote` 환경을 이용합니다. 이야기 블록 구문은 다음과 같습니다.
 
 ```{tex}
 \begin{shadequote}[<alignment>]{<author>}
@@ -435,32 +439,91 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 
 ```{tex}
 \begin{shadequote}{}
-나는 통계계산이 수리영역인 줄만 알았다. 그런데, 이제는 논리적인 사고도 필요한
-논리영역임을 느낀다. 그래서 논리적 사고로 통계적 데이터 분석을 위한 성능 좋은
-연장이 필요하기 시작했다.
+통상적으로 많은 사람들은 `수준을 등급의 높고 낮음을 의미하는 가치의 척도'로 
+인식하고 있다. 그러나 통계학계에서는 levels을 수준으로 직역하여 사용해 왔다. 
+혼동스럽다면, \textbf{수준을 범주형 데이터의 범주로 이해}하기 바란다.
 \end{shadequote}
 ```
 
-```{=tex}
-\begin{shadequote}[r]{}
-통상적으로 많은 사람들은 `수준을 등급의 높고 낮음을 의미하는 가치의 척도'로 인식하고 있다. 그러나 통계학계에서는 levels을 수준으로 직역하여 사용해 왔다. 혼동스럽다면, \textbf{수준을 범주형 데이터의 범주로 이해}하기 바란다.
-\end{shadequote}
-```
-
-명사의 명언을 인용하여 이야기할 경우에는 명사의 이름을 첫째 괄호에 기입합니다. 이 예제는 명사의 이름을 오른쪽 정렬하였습니다.
+명사의 명언을 인용하여 이야기할 경우에는 화자의 이름을 첫째 괄호에 기입합니다. 이 예제는 화자의 이름을 오른쪽 정렬하였습니다. 정렬은 l, c, r로 표기합니다. 각각 왼쪽, 가운데, 오른쪽 정렬을 의미합니다.
 
 ```{tex}
-\begin{shadequote}[r]{스피노자}
-자신은 할 수 없다고 생각하는 동안 사실은 그것을 하기 싫다고 다짐하고 있는 것이다.
+\begin{shadequote}[r]{안창호}
+진실은 반드시 따르는 자가 있고, 정의는 반드시 이루는 날이 있다.
 \end{shadequote}
 ```
 
-```{=tex}
-\begin{shadequote}[r]{스피노자}
-자신은 할 수 없다고 생각하는 동안 사실은 그것을 하기 싫다고 다짐하고 있는 것이다.
-\end{shadequote}
+### HTML 저작 전용
+
+HTML 문서로만 저작할 경우에 사용하는데, `blockquote` 태그를 이용합니다. 이야기 블록 구문은 다음과 같습니다.
+
+```{md}
+<blockquote class="otro-blockquote">
+  text of quote
+  <span>author</span>
+</blockquote>
 ```
 
+다음과 같이 기술하며, 화자의 이름의 정렬을 지원하지 않습니다. 왼쪽 정렬로 출력됩니다.
+
+```{md}
+<blockquote class="otro-blockquote">
+  진실은 반드시 따르는 자가 있고, 정의는 반드시 이루는 날이 있다.
+  <span>안창호</span>
+</blockquote>
+```
+
+#### 멀티 아웃 포맷
+
+멀티 아웃 포맷을 지원하는 구문은 다음과 같습니다. `align`은 PDF 저작에서만 동작합니다.
+
+````md
+```{r}`r ''`
+#| echo: false
+#| results: asis
+quote_block("
+text of quote
+", speaker = author, align = align)
+```
+````
+
+앞의 안창호 선생님의 명언을 이용하는 방법은 다음과 같습니다.
+
+````md
+```{r}`r ''`
+#| echo: false
+#| results: asis
+quote_block("진실은 반드시 따르는 자가 있고, 정의는 반드시 이루는 날이 있다.", 
+            speaker = "안창호", align = "right")
+```
+````
+
+```{r}
+#| echo: false
+#| results: asis
+quote_block("진실은 반드시 따르는 자가 있고, 정의는 반드시 이루는 날이 있다.", 
+            speaker = "안창호", align = "right")
+```
+
+저자의 이야기는 다음처럼 표현합니다.
+
+````md
+```{r}`r ''`
+#| echo: false
+#| results: asis
+quote_block("통상적으로 많은 사람들은 '수준을 등급의 높고 낮음을 의미하는 가치의 
+척도'로 인식하고 있다. 그러나 통계학계에서는 levels을 수준으로 직역하여 사용해 왔다. 
+혼동스럽다면, 수준을 범주형 데이터의 범주로 이해하기 바란다.")
+```
+````
+
+```{r}
+#| echo: false
+#| results: asis
+quote_block("통상적으로 많은 사람들은 '수준을 등급의 높고 낮음을 의미하는 가치의 척도'로 
+인식하고 있다. 그러나 통계학계에서는 levels을 수준으로 직역하여 사용해 왔다. 
+혼동스럽다면, 수준을 범주형 데이터의 범주로 이해하기 바란다.")
+```
 
 ### 타이틀 박스
 
