--- a/chap_version.qmd
+++ b/chap_version.qmd
@@ -24,25 +24,14 @@ source(here::here("_extensions", "bit2r", "bitPublish", "init_environments.R"))
 
 ### version 0.2.0    
 
-- **2023-05-29**
+- **2023-06-01**
 
-- pdf와 html에서 공통으로 작동하는 Custom blocks 정의
+- pdf와 html에서 공통으로 작동하는 정보 블록 정의
     - infobox
         - information, caution, warning, tip
-    - LaTeX or HTML output    
+    - 팬독 청크 이용
+- pdf와 html에서 공통으로 작동하는 이야기 블록 정의
+    - quote_block()
+    - R 함수 이용 
 
-```{r}
-#| echo: false
-#| results: asis
-quote_block(
-  "자신은 할 수 없다고 생각하는 동안 사실은 그것을 하기 싫다고 다짐하고 있는 것이다.", 
-  spkeaker = "스피노자", align = "right")
-```
-
-```{r}
-#| echo: false
-#| results: asis
-quote_block(
-  "자신은 할 수 없다고 생각하는 동안 사실은 그것을 하기 싫다고 다짐하고 있는 것이다.")
-```
 
