--- a/_extensions/bitPublish/bitPublish.tex
+++ b/_extensions/bitPublish/bitPublish.tex
@@ -203,7 +203,9 @@
 %%==============================================================================
 %% https://tex.stackexchange.com/questions/16964/block-quote-with-big-quotation-marks
 %% Start shadequote define ----------------------------------------------------- 
-\newfontfamily\quotefont[ExternalLocation=_extensions/bit2r/bitPublish/fonts/KOPUBWORLD_OTF_FONTS/]{KoPubWorld Dotum_Pro Light.otf}
+\newfontfamily\quotefont[ExternalLocation=_extensions/bit2r/bitPublish/fonts/KOPUBWORLD_OTF_FONTS/]{KoPubWorld Batang_Pro Light.otf}[%
+  Ligatures=TeX
+]  
 \newcommand*\quotesize{40} % if quote size changes, need a way to make shifts relative
 % Make commands for the quotes
 \newcommand*{\openquote}
